made all page responsive @ max-width: 900px.

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                 <div class="tools-container-subpage mt-5" id="tools-element-subpage">
                     <h2>Skills & Technology</h2>
                     <div class="tools-content">
-                        <div class="tools-row">
+                        <div class="tools-row-subpage">
                             <div>HTML</div>
                             <div>CSS</div>
                             <div>JAVASCRIPT</div>
@@ -84,7 +84,7 @@
                             <div>API</div>
                             <div>GIT/GITHUB</div>
                         </div>
-                        <div class="tools-row">
+                        <div class="tools-row-subpage">
                             <div>BOOTSTRAP</div>
                             <div>HOSTING: NETLIFY</div>
                             <div>FLEXBOX</div>
