--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
           </div>
         </div>
       </nav>
-    <div class="hero-container-homepage text-center" id="7">
+    <div class="hero-container-homepage text-center">
         <div class="homepage-bg"></div>
             <div class="hero-content-homepage">
-                <h1 class="">Dilhani Seneviratne</h1>
+                <h1 class="text-center">Dilhani Seneviratne</h1>
                 <h2 class="mb-5">Front-End Developer, based in Australia</h2>
                 <div>
                     <a href="index.html#content-container" class="btn hero-btn-branding">
@@ -66,54 +66,56 @@
                 </p>
                 <div class="tools-container-homepage">
                     <div class="tools-with-icons">
-                        <div>
-                            <i class="fa-brands fa-html5" title="HTML"></i>
-                            <br>
-                            HTML</div>
-                        <div>
-                            <i class="fa-brands fa-css3-alt" title="CSS"></i>
-                            <br>
-                            CSS</div>
-                        <div>
-                            <i class="fa-brands fa-square-js" title="JAVASCRIPT"></i>
-                            <br>
-                            JAVASCRIPT</div>
-                        <div>
-                            <i class="fa-solid fa-gears" title="API"></i>
-                            <br>
-                            API</div>
-                        <div>
-                            <i class="fa-brands fa-bootstrap" title="BOOTSTRAP"></i>
-                            <br>
-                            BOOTSTRAP</div>
-                        <div>
-                            <i class="fa-solid fa-code" title="VS CODE"></i>
-                            <br>
-                            VS CODE</div>
-                        <div>
-                            <i class="fa-brands fa-square-github" title="GIT/GITHUB"></i>
-                            <br>
-                            GIT/GITHUB</div>
-                        <div>
-                            <i class="fa-solid fa-server" title="NETLIFY"></i>
-                            <br>
-                            NETLIFY</div>
-                        <div>
-                            <i class="fa-solid fa-box" title="FLEXBOX"></i>
-                            <br>
-                            FLEXBOX</div>
-                        <div>
-                            <i class="fa-solid fa-tablet" title="RESPONSIVE"></i>
-                            <br>
-                            RESPONSIVE</div>
-                        <div>
-                            <i class="fa-brands fa-google" title="SEO"></i>
-                            <br>
-                            SEO</div>
-                        <div>
-                            <i class="fa-brands fa-react" title="REACT"></i>
-                            <br>
-                            REACT</div>
+                        <div class="row">
+                            <div class="col-xs-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-brands fa-html5" title="HTML"></i>
+                                <br>
+                                HTML</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                                <br>
+                                CSS</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-brands fa-square-js" title="JAVASCRIPT"></i>
+                                <br>
+                                JAVASCRIPT</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-solid fa-gears" title="API"></i>
+                                <br>
+                                API</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-brands fa-bootstrap" title="BOOTSTRAP"></i>
+                                <br>
+                                BOOTSTRAP</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-solid fa-code" title="VS CODE"></i>
+                                <br>
+                                VS CODE</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-brands fa-square-github" title="GIT/GITHUB"></i>
+                                <br>
+                                GIT/GITHUB</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-solid fa-server" title="NETLIFY"></i>
+                                <br>
+                                NETLIFY</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-solid fa-box" title="FLEXBOX"></i>
+                                <br>
+                                FLEXBOX</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-solid fa-tablet" title="RESPONSIVE"></i>
+                                <br>
+                                RESPONSIVE</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-brands fa-google" title="SEO"></i>
+                                <br>
+                                SEO</div>
+                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                <i class="fa-brands fa-react" title="REACT"></i>
+                                <br>
+                                REACT</div>
+                        </div>
                     </div>
                 </div>
             </div>
