added SheCodes Responsive certificate to portfolio

--- a/about.html
+++ b/about.html
@@ -117,9 +117,14 @@
                                     <img src="media/certificates/SC Plus.png" alt="" class="certificates img-fluid">
                                 </a>
                             </div>
-                            <div class="col-md mb-5" >
+                            <div class="col-md" >
                                 <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
                                     <img src="media/certificates/SC Plus AO.png" alt="" class="certificates img-fluid">
+                                </a>
+                            </div>
+                            <div class="col-md mb-5" >
+                                <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
+                                    <img src="media/certificates/SC Responsive.png" alt="" class="certificates img-fluid">
                                 </a>
                             </div>
                         </div>
