replaced shecodes certs. updated content/text. added contact form.

--- a/about.html
+++ b/about.html
@@ -51,16 +51,16 @@
                         <div class="row">
                             <div class="col-lg-7">
                                 <p>
-                                    I am currently on a learning journey to become a professional developer. 
+                                    I first had a glimpse of web development in 2011. The typical story of a teenager equipped with nothing but sheer determination & Google, customising Tumblr themes for aesthetic purposes. These themes are now long gone, but my interest in coding was forever piqued.
                                     <br>
                                     <br>
-                                    I first had a glimpse of web development in 2011. Equipped with nothing but determination & Google, I was customising my Tumblr themes to fit the aesthetics & purpose of my blogs. These blogs are long gone, but my interest in coding was forever piqued, although I decided to pursue other endeavours. 
+                                    Fast forward to more than a decade later, I decided to revisit and combine the skills and interests that I already have. I have a knack for problem-solving, I like building things, I like design, I like technology. At the epicentre of all these things was coding. 
                                     <br>
                                     <br>
-                                    Fast forward (almost) a decade later to 2020, COVID-19 rocked the globe, some of us had to re-evaluate our lives, and I was left with no clear direction with what I wanted pursue in mine. I took this time for personal development; I tried reverse-engineering my life vision and combining it with skills and interests that I already have. I have a knack for problem-solving, I like building things, I like renovations; before & after's, I like design. At the epicentre of all these things was coding, web development to be precise. 
+                                    In October 2022, I immersed myself in the SheCodes workshops and have been learning and building applications/projects with the fundamentals and React ever since.
                                     <br>
                                     <br>
-                                    Two years later, I discovered and immersed myself in the SheCodes workshops, and since October 2022 I have been learning HTML, CSS & Javascript while building real-life applications/projects. 
+                                    <em>I am currently seeking new opportunities in front-end development. I am open to working remotely and have flexible hours. </em> 
                                 </p>
                             </div>
                             <div class="col-lg-5">
@@ -76,25 +76,19 @@
                             <div>HTML</div>
                             <div>CSS</div>
                             <div>JAVASCRIPT</div>
-                            <div>EDITOR: VS-CODE</div>
-                            <div>CODE SANDBOX</div>
-                            <div>CODEPEN</div>
-                            <div>INVISION</div>
-                            <div>FIGMA</div>
+                            <div>REACT</div>
+                            <div>BOOTSTRAP</div>
+                            <div>RESPONSIVE</div>
                             <div>API</div>
                             <div>GIT/GITHUB</div>
                         </div>
                         <div class="tools-row-subpage">
-                            <div>BOOTSTRAP</div>
-                            <div>HOSTING: NETLIFY</div>
-                            <div>FLEXBOX</div>
                             <div>TERMINAL</div>
-                            <div>GRIDS</div>
+                            <div>EDITOR: VS-CODE</div>
+                            <div>HOSTING: NETLIFY</div>
                             <div>SEO</div>
-                            <div>NPM</div>
-                            <div>RESPONSIVE</div>
-                            <div>FONTS</div>
-                            <div>REACT</div>
+                            <div>FIGMA/INVISION</div>
+                            <div>CODE SANDBOX</div>
                         </div>
                     </div>
                 </div>
@@ -103,27 +97,27 @@
                     <div class="certificates-content">
                         <div class="row">
                             <div class="col-md">
-                                <a href="https://www.shecodes.io/certificates/5f90ae84a0ac050931f3d6c7d48b46e3" target="_blank">
-                                    <img src="media/certificates/SC Basics.png" alt="" class="certificates img-fluid">
+                                <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
+                                    <img src="media/certificates/PlusAO.png" alt="" class="certificates img-fluid">
                                 </a>
                             </div>
                             <div class="col-md">
-                                <a href="https://www.shecodes.io/certificates/4fd8ea8fc9a183deee00a1059ebc5871" target="_blank">
-                                    <img src="media/certificates/SC Basics AO.png" alt="" class="certificates img-fluid">
+                                <a href="https://www.shecodes.io/certificates/b48e7a515c5b927e56c9e508aec67c50" target="_blank">
+                                    <img src="media/certificates/ResponsiveAO.png" alt="" class="certificates img-fluid">
                                 </a>
                             </div>
                             <div class="col-md">
-                                <a href="https://www.shecodes.io/certificates/f994a81e1e8122ecb9ed458dc031939c" target="_blank">
-                                    <img src="media/certificates/SC Plus.png" alt="" class="certificates img-fluid">
+                                <a href="https://www.shecodes.io/certificates/5bdad4f4f8ab4149e20f70b6c99dcfa3" target="_blank">
+                                    <img src="media/certificates/ReactAO.png" alt="" class="certificates img-fluid">
                                 </a>
                             </div>
                             <div class="col-md" >
-                                <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
+                                <a href="" target="_blank">
                                     <img src="media/certificates/SC Plus AO.png" alt="" class="certificates img-fluid">
                                 </a>
                             </div>
                             <div class="col-md mb-5" >
-                                <a href="https://www.shecodes.io/certificates/a71614afd7fcc643596987a36c4a3088" target="_blank">
+                                <a href="" target="_blank">
                                     <img src="media/certificates/SC Responsive.png" alt="" class="certificates img-fluid">
                                 </a>
                             </div>
