--- a/index.html
+++ b/index.html
@@ -10,142 +10,143 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/b80849d514.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/744f2b13b2.js" crossorigin="anonymous"></script>    
     <title>Front-End Developer | Dilhani Seneviratne</title>
 </head>
 <body>
-<div id="top">
-    <nav class="navbar sticky-top navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/" title="Dilhani Senaviratne's Homepage">
-            <div class="logo">
-                ・D/S・
-            </div>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="/" title="Dilhani Senaviratne's Homepage">Home</a>
-              <a class="nav-link" href="about.html" title="About Dilhani Senaviratne">About</a>
-              <a class="nav-link" href="projects.html" title="Projects by Dilhani Senaviratne">Projects</a>
-              <a class="nav-link" href="contact.html" title="Contact Dilhani Senaviratne">Contact</a>
-            </div>
-          </div>
-        </div>
-      </nav>
-    <div class="hero-container-homepage text-center">
-        <div class="homepage-bg"></div>
-            <div class="hero-content-homepage">
-                <h1 class="text-center">Dilhani Seneviratne</h1>
-                <h2 class="mb-5">Front-End Developer, based in Australia</h2>
-                <div>
-                    <a href="index.html#content-container" class="btn hero-btn-branding">
-                        <i class="fas fa-angle-double-down"></i>
-                    </a>
+    <div id="top">
+        <nav class="navbar sticky-top navbar-expand-lg">
+            <div class="container-fluid">
+            <a class="navbar-brand" href="/" title="Dilhani Senaviratne's Homepage">
+                <div class="logo">
+                    ・D/S・
+                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="/" title="Dilhani Senaviratne's Homepage">Home</a>
+                <a class="nav-link" href="about.html" title="About Dilhani Senaviratne">About</a>
+                <a class="nav-link" href="projects.html" title="Projects by Dilhani Senaviratne">Projects</a>
+                <a class="nav-link" href="contact.html" title="Contact Dilhani Senaviratne">Contact</a>
                 </div>
             </div>
-    </div>
-    <div class="content-container-homepage" id="content-container">
-        <div class="content-homepage">
-            <div>
-                <h2 class="subheading">Welcome!</h2>
             </div>
-            <div class="welcome-message">
-                <p class="mb-5">Thank you for visiting my online portfolio. 
-                    <br>
-                    <br>
-                    My name is <strong>Dilhani</strong>. I am a budding web developer with a focus on Front-End Development, currently based in <strong>Adelaide, Australia</strong>. 
-                    <br>
-                    <br>
-                    I started my official coding journey in 2022 by joining the SheCodes community. Since then, I have been consistently working on projects/designs to further improve my coding skills. 
-                    <br>
-                    <br>
-                    Here are a few of the things that I have been trained on:
-                </p>
-                <div class="tools-container-homepage">
-                    <div class="tools-with-icons">
-                        <div class="row">
-                            <div class="col-xs-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-brands fa-html5" title="HTML"></i>
-                                <br>
-                                HTML</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-brands fa-css3-alt" title="CSS"></i>
-                                <br>
-                                CSS</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-brands fa-square-js" title="JAVASCRIPT"></i>
-                                <br>
-                                JAVASCRIPT</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-solid fa-gears" title="API"></i>
-                                <br>
-                                API</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-brands fa-bootstrap" title="BOOTSTRAP"></i>
-                                <br>
-                                BOOTSTRAP</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-solid fa-code" title="VS CODE"></i>
-                                <br>
-                                VS CODE</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-brands fa-square-github" title="GIT/GITHUB"></i>
-                                <br>
-                                GIT/GITHUB</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-solid fa-server" title="NETLIFY"></i>
-                                <br>
-                                NETLIFY</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-solid fa-box" title="FLEXBOX"></i>
-                                <br>
-                                FLEXBOX</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-solid fa-tablet" title="RESPONSIVE"></i>
-                                <br>
-                                RESPONSIVE</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-brands fa-google" title="SEO"></i>
-                                <br>
-                                SEO</div>
-                            <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
-                                <i class="fa-brands fa-react" title="REACT"></i>
-                                <br>
-                                REACT</div>
+        </nav>
+        <div class="hero-container-homepage text-center">
+            <div class="homepage-bg"></div>
+                <div class="hero-content-homepage">
+                    <p>Hi there! I'm</p>
+                    <h1 class="text-center">Dilhani Seneviratne</h1>
+                    <h2 class="mb-5">Front-End Developer, based in Australia</h2>
+                    <div>
+                        <a href="index.html#content-container" class="btn hero-btn-branding">
+                            <i class="fa-solid fa-angle-double-down"></i>
+                        </a>
+                    </div>
+                </div>
+        </div>
+        <div class="content-container-homepage" id="content-container">
+            <div class="content-homepage">
+                <div>
+                    <h2 class="subheading">Welcome!</h2>
+                </div>
+                <div class="welcome-message">
+                    <p class="mb-5">Thank you for visiting my online portfolio. 
+                        <br>
+                        <br>
+                        My name is <strong>Dilhani</strong> and I am currently based in Adelaide, Australia. I am a budding web developer with a focus on Frontend Development.
+                        <br>
+                        <br>
+                        I officially started my coding journey in 2022 by joining the SheCodes community. Since then I have been working on projects/designs to further improve my coding skills.
+                        <br>
+                        <br>
+                        Here are a few of the things that I have been trained on:
+                    </p>
+                    <div class="tools-container-homepage">
+                        <div class="tools-with-icons">
+                            <div class="row">
+                                <div class="col-xs-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-brands fa-html5" title="HTML"></i>
+                                    <br>
+                                    HTML</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                                    <br>
+                                    CSS</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-brands fa-square-js" title="JAVASCRIPT"></i>
+                                    <br>
+                                    JAVASCRIPT</div>
+                                    <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                        <i class="fa-brands fa-react" title="REACT"></i>
+                                        <br>
+                                        REACT</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-solid fa-gears" title="API"></i>
+                                    <br>
+                                    API</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-brands fa-bootstrap" title="BOOTSTRAP"></i>
+                                    <br>
+                                    BOOTSTRAP</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-solid fa-code" title="VS CODE"></i>
+                                    <br>
+                                    VS CODE</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-brands fa-square-github" title="GIT/GITHUB"></i>
+                                    <br>
+                                    GIT/GITHUB</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-solid fa-server" title="NETLIFY"></i>
+                                    <br>
+                                    NETLIFY</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-solid fa-box" title="FLEXBOX"></i>
+                                    <br>
+                                    FLEXBOX</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-solid fa-tablet" title="RESPONSIVE"></i>
+                                    <br>
+                                    RESPONSIVE</div>
+                                <div class="col-sm-6 col-md-4 col-lg-2 col-xxl-1">
+                                    <i class="fa-brands fa-google" title="SEO"></i>
+                                    <br>
+                                    SEO</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="buttons-homepage">
-                <div class="about-button-homepage">
-                    <a href="/about.html" class="btn btn-branding">LEARN MORE</a>
+                <div class="buttons-homepage">
+                    <div class="about-button-homepage">
+                        <a href="/about.html" class="btn btn-branding">LEARN MORE</a>
+                    </div>
+                    <div class="projects-button-homepage">
+                        <a href="/projects.html" class="btn btn-branding">PROJECTS</a>
+                    </div>
                 </div>
-                <div class="projects-button-homepage">
-                    <a href="/projects.html" class="btn btn-branding">PROJECTS</a>
+            </div>
+            <footer>
+                <div class="reach-out text-center">
+                    Let's work together! Reach out ↓
                 </div>
+                <div class="social-links text-center">
+                    <a href="mailto:dilhani.08@gmail.com" target="_blank" title="Email Dilhani Seneviratne"><i class="fa-regular fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank" title="Dilhani Seneviratne's LinkedIn Profile"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/dsen12" target="_blank" title="Dilhani Seneviratne's GitHub Profile"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </footer>
+            <div class="scroll-up-button">
+                <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
+                    Back to top <i class="fas fa-angle-double-up"></i>
+                </a>
             </div>
+            <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git" title="GitHub repository">open-sourced</a> on GitHub.</p>
         </div>
-        <footer>
-            <div class="reach-out text-center">
-                Let's work together! Reach out ↓
-            </div>
-            <div class="social-links text-center">
-                <a href="mailto:dilhani.08@gmail.com" target="_blank" title="Email Dilhani Seneviratne"><i class="fa-regular fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank" title="Dilhani Seneviratne's LinkedIn Profile"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/dsen12" target="_blank" title="Dilhani Seneviratne's GitHub Profile"><i class="fa-brands fa-github"></i></a>
-            </div>
-        </footer>
-        <div class="scroll-up-button">
-            <a href="index.html#top" class="scroll-up-text" title="scroll-to-top">
-                Back to top <i class="fas fa-angle-double-up"></i>
-            </a>
-        </div>
-        <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git" title="GitHub repository">open-sourced</a> on GitHub.</p>
     </div>
-</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
 </body>
 </html>
