--- a/contact.html
+++ b/contact.html
@@ -41,29 +41,44 @@
         <div class="hero-content-subpage">
             <div>
                 <h1 class="">Contact</h1>
+                <h2 class="contact-subheading">Let's get in touch!</h2>
             </div>
         </div>
     </div>
-    <div class="content-container-subpage text-center" id="about-container">
+    <div class="content-container-subpage text-start mb-5" id="about-container">
         <div class="contact content-subpage">
-            <h2 class="subheading mb-3">Let's get in touch!</h2>
-            <p class="mb-2">I’m currently looking to join a new team of creative designers and developers. I'd love to hear from you!</p>
             <div class="contact-content-container">
-                <div>
-                    <h2 class="sub-subheading">/Email <i class="fa-solid fa-envelope"></i></h2>
-                    <a href="mailto:dilhani.08@gmail.com" target="_blank">dilhani.08@gmail.com</a>
-                </div>
-                <div>
-                    <h2 class="sub-subheading">/LinkedIn <i class="fa-brands fa-linkedin"></i></h2>
-                    <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank">view profile here</a>
-                </div>
-                <div>
-                    <h2 class="sub-subheading">/GitHub <i class="fa-brands fa-square-github"></i></h2>
-                    <a href="https://github.com/dsen12" target="_blank">Dilhani Seneviratne</a>
+                <div class="row">
+                    <div class="col-3 contact-links-container">
+                        <div>
+                            <h2 class="sub-subheading">/Email <i class="fa-solid fa-envelope"></i></h2>
+                            <a href="mailto:dilhani.08@gmail.com" target="_blank">dilhani.08@gmail.com</a>
+                        </div>
+                        <div>
+                            <h2 class="sub-subheading">/LinkedIn <i class="fa-brands fa-linkedin"></i></h2>
+                            <a href="https://www.linkedin.com/in/dilhani-seneviratne" target="_blank">view profile here</a>
+                        </div>
+                        <div>
+                            <h2 class="sub-subheading">/GitHub <i class="fa-brands fa-square-github"></i></h2>
+                            <a href="https://github.com/dsen12" target="_blank">Dilhani Seneviratne</a>
+                        </div>
+                    </div>
+                    <div class="col-6 contact-form-container">
+                        <h5 class="mb-3">Drop me a message. I'd love to hear from you!</h5>
+                        <form action="https://formsubmit.co/dilhani.sen08@gmail.com" method="POST">
+                            <input type="hidden" name="_captcha" value="false">
+                            <input type="hidden" name="_next" value="contact.html">
+                            <input type="text" name="name" required placeholder="Name*" autocomplete="none">
+                            <input type="email" name="email" required placeholder="Email*" autocomplete="none">
+                            <input type="text" name="message" required placeholder="Message*" class="text">
+                            <button type="submit">Send Message</button>
+                       </form>
+                    </div>
+                    <div class="col-3"></div>
                 </div>
             </div>
         </div>
-        <p class="coder">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git">open-sourced</a> on GitHub.</p>
+        <p class="coder mt-5">This site is coded by D.Sen and is <a href="https://github.com/dsen12/Portfolio.git">open-sourced</a> on GitHub.</p>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>    
