--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
             <div class="hero-content-subpage">
                 <div>
                     <h1 class="">Projects</h1>
-                    <h2 class="subheading">Take a look at what I've been working on:</h2>
+                    <h2 class="projects-subheading">Take a look at what I've been working on:</h2>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <div class="projects content-subpage">
                 <div class="projects-content-container text-center">
                     <div class="row">
-                        <div class="col-md-4 project-background">
+                        <div class="col-md-3 project-background">
                           <div class="card text-center">
                               <img class="card-img-top project-images" src="media/project-images/1.svg" alt="Mock up of World Destination Clock">
                               <div class="card-body">
@@ -65,7 +65,7 @@
                               </div>
                           </div>
                         </div>
-                        <div class="col-md-4 project-background">
+                        <div class="col-md-3 project-background">
                           <div class="card text-center">
                               <img class="card-img-top project-images" src="media/project-images/2.svg" alt="mock up of Vanilla JS Weather App">
                               <div class="card-body">
@@ -74,14 +74,14 @@
                                     This weather application allows you to check the current weather & 6-day forecast of over 200,000 cities in the world, including your current location.
                                   </p>
                                   <p>
-                                      HTML ・ CSS ・ JAVASCRIPT ・ BOOTSTRAP
+                                      HTML ・ CSS ・ JAVASCRIPT ・ API ・ BOOTSTRAP
                                   </p>
                                   <a href="https://github.com/dsen12/Weather-app.git" target="_blank"><i class="fa-brands fa-github btn-branding-projects"> view code</i></a>
                                   <a href="https://weather-app-dsen.netlify.app/" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square btn-branding-projects"> view app</i></a>
                       </div>
                           </div>
                         </div>
-                        <div class="col-md-4 project-background">
+                        <div class="col-md-3 project-background">
                           <div class="card text-center">
                               <img class="card-img-top project-images" src="media/project-images/3.svg" alt="Mock up of Dilhani Seneviratne's portfolio">
                               <div class="card-body">
