added thanks page to form

--- a/contactthanks.html
+++ b/contactthanks.html
@@ -63,19 +63,9 @@
                             <a href="https://github.com/dsen12" target="_blank">Dilhani Seneviratne</a>
                         </div>
                     </div>
-                    <div class="col-6 contact-form-container">
-                        <h5 class="mb-3">Drop me a message. I'd love to hear from you!</h5>
-                        <form action="https://formsubmit.co/dilhani.sen08@gmail.com" method="POST">
-                            <input type="hidden" name="_captcha" value="false">
-                            <input type="hidden" name="_subject" value="New submission!">
-                            <input type="hidden" name="_next" value="https://dilhani.dev/contact.html">
-                            <input type="text" name="name" required placeholder="Name*" autocomplete="none">
-                            <input type="email" name="email" required placeholder="Email*" autocomplete="none">
-                            <input type="text" name="message" required placeholder="Message*" class="text">
-                            <button type="submit">Send Message</button>
-                       </form>
+                    <div class="col contact-form-container">
+                        <h5 class="thanks">Thank you for your message! I'll be in touch soon 😊</h5>
                     </div>
-                    <div class="col-3"></div>
                 </div>
             </div>
         </div>
