--- a/contact.html
+++ b/contact.html
@@ -69,8 +69,8 @@
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_subject" value="New submission!">
                             <input type="hidden" name="_next" value="https://dilhani.dev/contact.html">
-                            <input type="text" name="name" required placeholder="Name*" autocomplete="none">
-                            <input type="email" name="email" required placeholder="Email*" autocomplete="none">
+                            <input type="text" name="name" required placeholder="Name*" autocomplete="off">
+                            <input type="email" name="email" required placeholder="Email*" autocomplete="off">
                             <input type="text" name="message" required placeholder="Message*" class="text">
                             <button type="submit">Send Message</button>
                        </form>
