--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
                         <form action="https://formsubmit.co/dilhani.sen08@gmail.com" method="POST">
                             <input type="hidden" name="_captcha" value="false">
                             <input type="hidden" name="_subject" value="New submission!">
-                            <input type="hidden" name="_next" value="https://dilhani.dev/contact.html">
+                            <input type="hidden" name="_next" value="https://dilhani.dev/contactthanks.html">
                             <input type="text" name="name" required placeholder="Name*" autocomplete="off">
                             <input type="email" name="email" required placeholder="Email*" autocomplete="off">
                             <input type="text" name="message" required placeholder="Message*" class="text">
