--- a/index.html
+++ b/index.html
@@ -35,13 +35,15 @@
             </div>
             </div>
         </nav>
-        <div class="hero-container-homepage text-center">
+        <div class="hero-container-homepage">
             <div class="homepage-bg"></div>
                 <div class="hero-content-homepage">
-                    <p>Hi there! I'm</p>
-                    <h1 class="text-center">Dilhani Seneviratne</h1>
-                    <h2 class="mb-5">Front-End Developer, based in Australia</h2>
-                    <div>
+                    <div class="headers">
+                        <p>Hi there! My name is</p>
+                        <h1>Dilhani Seneviratne.</h1>
+                        <h2 class="mb-5">I'm a Front-End Developer, based in Australia</h2>
+                    </div>
+                    <div class="scroll-down-button">
                         <a href="index.html#content-container" class="btn hero-btn-branding">
                             <i class="fa-solid fa-angle-double-down"></i>
                         </a>
