--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
         <div class="contact content-subpage">
             <div class="contact-content-container">
                 <div class="row">
-                    <div class="col-3 contact-links-container">
+                    <div class="col contact-links-container">
                         <div>
                             <h2 class="sub-subheading">/Email <i class="fa-solid fa-envelope"></i></h2>
                             <a href="mailto:dilhani.08@gmail.com" target="_blank">dilhani.08@gmail.com</a>
@@ -63,7 +63,7 @@
                             <a href="https://github.com/dsen12" target="_blank">Dilhani Seneviratne</a>
                         </div>
                     </div>
-                    <div class="col-6 contact-form-container">
+                    <div class="col contact-form-container">
                         <h5 class="mb-3">Drop me a message. I'd love to hear from you!</h5>
                         <form action="https://formsubmit.co/dilhani.sen08@gmail.com" method="POST">
                             <input type="hidden" name="_captcha" value="false">
@@ -75,7 +75,6 @@
                             <button type="submit">Send Message</button>
                        </form>
                     </div>
-                    <div class="col-3"></div>
                 </div>
             </div>
         </div>
