--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Playfair+Display:wght@700&family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/744f2b13b2.js" crossorigin="anonymous"></script>    
-    <title>Front-End Developer | Dilhani Seneviratne</title>
+    <title>Dilhani Seneviratne | Front-End Developer</title>
 </head>
 <body>
     <div id="top">
